--- a/Capstone Project 2/notebooks/eda.ipynb
+++ b/Capstone Project 2/notebooks/eda.ipynb
@@ -82,24 +82,20 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 124
+          "height": 55
         },
-        "outputId": "29d9dc29-3dd8-4134-8a31-34daeb0c8c17"
+        "outputId": "f5aa154e-19b4-441b-f474-96d192e61821"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 28,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "··········\n",
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ],
           "name": "stdout"
         }
@@ -127,7 +123,7 @@
       "metadata": {
         "id": "DXIii60b4RQO",
         "colab_type": "code",
-        "outputId": "87dd7c45-6a7d-44e8-aaed-2a0429c85bf2",
+        "outputId": "97e541e9-2939-46fd-9f72-c4a3c0d57f90",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 202
@@ -137,7 +133,7 @@
         "df = pd.read_csv('train.csv', parse_dates=[\"date\"])\n",
         "df.head()"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -219,7 +215,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 2
+          "execution_count": 3
         }
       ]
     },
@@ -228,7 +224,7 @@
       "metadata": {
         "id": "90mjoBFL4RQX",
         "colab_type": "code",
-        "outputId": "4e67f78b-23d9-4ba0-a374-951e0197e687",
+        "outputId": "bc7e8ead-3d46-4ca2-da7d-3c81f2ba1f2a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 294
@@ -237,7 +233,7 @@
       "source": [
         "df.describe()"
       ],
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -334,7 +330,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 4
         }
       ]
     },
@@ -353,7 +349,7 @@
       "metadata": {
         "id": "FwkKUhpm4RQg",
         "colab_type": "code",
-        "outputId": "4815749a-b7aa-438c-ad98-1f14d3998e50",
+        "outputId": "0501d0fe-17b9-41f2-ebb0-00dde28858e5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
@@ -362,7 +358,7 @@
       "source": [
         "print('Time period start: {}\\nTime period end: {}'.format(df.date.min(),df.date.max()))"
       ],
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -379,7 +375,7 @@
       "metadata": {
         "id": "-uw9WVjA4RQl",
         "colab_type": "code",
-        "outputId": "b57e0388-5db8-4db7-9c72-ec418a38e032",
+        "outputId": "bce034d4-555a-4641-97a2-72f18eceb74f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -388,7 +384,7 @@
       "source": [
         "df.columns"
       ],
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -400,7 +396,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 6
         }
       ]
     },
@@ -409,7 +405,7 @@
       "metadata": {
         "id": "CkoGBKH_4RQr",
         "colab_type": "code",
-        "outputId": "91354028-0fe0-4cc6-afbe-d5f12d961126",
+        "outputId": "7116512b-f64e-4128-b45e-962bb5525061",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -418,7 +414,7 @@
       "source": [
         "df.shape"
       ],
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -430,7 +426,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 7
         }
       ]
     },
@@ -477,7 +473,7 @@
       "metadata": {
         "id": "lmAmAz4u4RQ5",
         "colab_type": "code",
-        "outputId": "11657b47-2731-4958-f033-ee1d2fda7ee3",
+        "outputId": "4e9dcb46-9863-49e7-c0b4-f98b2a3d800e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 443
@@ -487,7 +483,7 @@
         "df_month.plot(figsize=(15,6))\n",
         "plt.show()"
       ],
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
@@ -522,7 +518,7 @@
       "metadata": {
         "id": "mopGH_I14RQ9",
         "colab_type": "code",
-        "outputId": "bc89aa99-5710-45d0-d6e6-5e7881447c86",
+        "outputId": "0ea7168e-d84b-4cad-e1c5-ff56d10a07bc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 418
@@ -536,7 +532,7 @@
         "df.sales.plot(kind='kde',figsize=(15, 6))\n",
         "plt.show()"
       ],
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -571,7 +567,7 @@
       "metadata": {
         "id": "sXvrPom34RRB",
         "colab_type": "code",
-        "outputId": "c3434ef6-4889-4697-837e-a62c499ed533",
+        "outputId": "b9058d65-7963-45b1-de1a-603a24419d09",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 443
@@ -581,7 +577,7 @@
         "fig, ax = plt.subplots(figsize=(15,6))\n",
         "sns.boxplot(df_month.index.year, df_month.sales, ax=ax);"
       ],
-      "execution_count": 11,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "display_data",
@@ -614,7 +610,7 @@
       "metadata": {
         "id": "oPX4tnM14RRG",
         "colab_type": "code",
-        "outputId": "abc07450-83fc-42e4-d56b-63f2e9a49486",
+        "outputId": "ee885c0b-fdf4-4228-d14f-c9d3263892e1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 601
@@ -627,7 +623,7 @@
         "fig = decomposition.plot()\n",
         "plt.show()"
       ],
-      "execution_count": 12,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
@@ -672,7 +668,7 @@
       "metadata": {
         "id": "D75mNM4i4RRO",
         "colab_type": "code",
-        "outputId": "bb2c6f39-498a-4500-97b9-5362951e56ac",
+        "outputId": "a56ac82e-b33e-40c8-f7be-c22c9316729d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 228
@@ -682,7 +678,7 @@
         "df_item_store.plot(figsize=(15,2),title='item 1 store 1')\n",
         "plt.show;"
       ],
-      "execution_count": 14,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "display_data",
@@ -703,7 +699,7 @@
       "metadata": {
         "id": "vy_x7Ajn4RRS",
         "colab_type": "code",
-        "outputId": "1d6bcc30-8366-4449-c5ae-38a5caab5c02",
+        "outputId": "4c2e7247-6e49-4757-f9a4-57e4674d8383",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 418
@@ -717,7 +713,7 @@
         "df[(df['item']==1) & (df['store']==1)].sales.plot(kind='kde',figsize=(15, 6))\n",
         "plt.show();"
       ],
-      "execution_count": 15,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "display_data",
@@ -748,7 +744,7 @@
       "metadata": {
         "id": "VwPuyEW84RRX",
         "colab_type": "code",
-        "outputId": "7903f183-2f47-4b1a-a529-76083d443b3c",
+        "outputId": "3a3115a6-7768-4ad9-c793-92a0b4961f58",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 440
@@ -758,7 +754,7 @@
         "fig, ax = plt.subplots(figsize=(15,6))\n",
         "sns.boxplot(df_item_store.index.year, df_item_store.sales, ax=ax);"
       ],
-      "execution_count": 16,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "display_data",
@@ -789,7 +785,7 @@
       "metadata": {
         "id": "U1bXjlOM4RRb",
         "colab_type": "code",
-        "outputId": "cfc6fc7b-45e1-45b2-f420-962c1ef8e13d",
+        "outputId": "156c3ca0-d2bd-4667-c894-c0a1ef4ecc84",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 597
@@ -801,7 +797,7 @@
         "fig = decomposition.plot()\n",
         "plt.show();"
       ],
-      "execution_count": 17,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "display_data",
@@ -853,7 +849,7 @@
       "metadata": {
         "id": "ZaeCBBpa4RRi",
         "colab_type": "code",
-        "outputId": "092d80b3-9a83-44ab-b1e6-c0bda797a381",
+        "outputId": "90015369-a247-4f00-ee21-a0a7d38c002f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 173
@@ -868,7 +864,7 @@
         "    dfoutput['Critical Value (%s)'%key] = value\n",
         "print (dfoutput)"
       ],
-      "execution_count": 18,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -918,7 +914,7 @@
       "metadata": {
         "id": "3ZKgDKTq4RRq",
         "colab_type": "code",
-        "outputId": "56bc715f-3acb-43e2-e430-51d112495deb",
+        "outputId": "796b4be9-a9de-43fc-bd28-9ee005807f4f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 536
@@ -938,7 +934,7 @@
         "plt.title('Rolling Mean & Standard Deviation')\n",
         "plt.show();"
       ],
-      "execution_count": 20,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "display_data",
@@ -969,7 +965,7 @@
       "metadata": {
         "id": "xGlDq-Yv4RRv",
         "colab_type": "code",
-        "outputId": "0b187428-eb09-4705-8b9c-6b0e42979da4",
+        "outputId": "cc5e732b-4f7f-46a9-c4c8-8d4bffae28b5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 173
@@ -984,7 +980,7 @@
         "    dfoutput['Critical Value (%s)'%key] = value\n",
         "print (dfoutput)"
       ],
-      "execution_count": 21,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -1024,8 +1020,10 @@
       "source": [
         "# Function that takes a time series dataframe and transforms it with first order differencing, \n",
         "# returning the transformed time series as a pandas series\n",
+        "diffs = []\n",
         "def ts_diff(ts):\n",
         "    diff = ts.sales - ts.sales.shift(1)\n",
+        "    diffs.extend(diff)\n",
         "    return diff.dropna()"
       ],
       "execution_count": 0,
@@ -1050,6 +1048,119 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MyZNg9kCtFcQ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 202
+        },
+        "outputId": "2bdcabb8-bfbf-4624-896b-b03918ccfd52"
+      },
+      "source": [
+        "df['diffs'] = diffs\n",
+        "df.head()"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>date</th>\n",
+              "      <th>store</th>\n",
+              "      <th>item</th>\n",
+              "      <th>sales</th>\n",
+              "      <th>month</th>\n",
+              "      <th>diffs</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>2013-01-01</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>13</td>\n",
+              "      <td>2013-01</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2013-01-02</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>11</td>\n",
+              "      <td>2013-01</td>\n",
+              "      <td>-2.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2013-01-03</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>14</td>\n",
+              "      <td>2013-01</td>\n",
+              "      <td>3.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>2013-01-04</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>13</td>\n",
+              "      <td>2013-01</td>\n",
+              "      <td>-1.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>2013-01-05</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>10</td>\n",
+              "      <td>2013-01</td>\n",
+              "      <td>-3.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "        date  store  item  sales    month  diffs\n",
+              "0 2013-01-01      1     1     13  2013-01    NaN\n",
+              "1 2013-01-02      1     1     11  2013-01   -2.0\n",
+              "2 2013-01-03      1     1     14  2013-01    3.0\n",
+              "3 2013-01-04      1     1     13  2013-01   -1.0\n",
+              "4 2013-01-05      1     1     10  2013-01   -3.0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 25
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "AccfdArE4RR8",
@@ -1071,10 +1182,6 @@
         "colab": {}
       },
       "source": [
-        "with open('/content/drive/My Drive/Capstone Project 2/data/processed/ts.txt', 'w') as f:\n",
-        "    for item in ts:\n",
-        "        f.write(\"%s\\n\" % item)\n",
-        "\n",
         "df.to_csv('/content/drive/My Drive/Capstone Project 2/data/processed/df.csv',index='False')"
       ],
       "execution_count": 0,
